Add scientific packages API
